[gd_scene load_steps=49 format=3 uid="uid://de8015a6qdtoi"]

[ext_resource type="Shader" path="res://shaders/charging.gdshader" id="1_578vr"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_eu1wi"]
[ext_resource type="Texture2D" uid="uid://b7mwgm0snwume" path="res://assets/sprites/knight.png" id="1_juj52"]
[ext_resource type="Texture2D" uid="uid://dk1iqy4u14ymy" path="res://assets/sprites/knight-fly.png" id="2_yfaxd"]
[ext_resource type="AudioStream" uid="uid://ddjnwca5b4mi4" path="res://assets/sounds/jump.wav" id="3_7c2jg"]
[ext_resource type="AudioStream" uid="uid://c48bh7f0o1xsn" path="res://assets/sounds/feather.wav" id="4_ljgnm"]
[ext_resource type="AudioStream" uid="uid://cq57hw8jx6thb" path="res://assets/sounds/hurt.wav" id="5_e0bit"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kysy4"]
shader = ExtResource("1_578vr")
shader_parameter/enabled = 0.0
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/cycle_speed = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pe7v4"]
atlas = ExtResource("2_yfaxd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0qh1"]
atlas = ExtResource("2_yfaxd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6svg"]
atlas = ExtResource("2_yfaxd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj6r1"]
atlas = ExtResource("2_yfaxd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcc8b"]
atlas = ExtResource("2_yfaxd")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgns"]
atlas = ExtResource("2_yfaxd")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvvus"]
atlas = ExtResource("1_juj52")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qfbb"]
atlas = ExtResource("1_juj52")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jbf0"]
atlas = ExtResource("1_juj52")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lkrc"]
atlas = ExtResource("1_juj52")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pudh3"]
atlas = ExtResource("1_juj52")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liavk"]
atlas = ExtResource("1_juj52")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2avk"]
atlas = ExtResource("1_juj52")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epfhx"]
atlas = ExtResource("1_juj52")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ldfj"]
atlas = ExtResource("1_juj52")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dndbv"]
atlas = ExtResource("1_juj52")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjva0"]
atlas = ExtResource("1_juj52")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wau5g"]
atlas = ExtResource("1_juj52")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3sjj"]
atlas = ExtResource("1_juj52")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdpon"]
atlas = ExtResource("1_juj52")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7t4n"]
atlas = ExtResource("1_juj52")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26mlm"]
atlas = ExtResource("1_juj52")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao867"]
atlas = ExtResource("1_juj52")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o756"]
atlas = ExtResource("1_juj52")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16pql"]
atlas = ExtResource("1_juj52")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itbk8"]
atlas = ExtResource("1_juj52")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w58n"]
atlas = ExtResource("1_juj52")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3omc0"]
atlas = ExtResource("1_juj52")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n04gn"]
atlas = ExtResource("1_juj52")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_118b3"]
atlas = ExtResource("1_juj52")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klq14"]
atlas = ExtResource("1_juj52")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gryx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe7v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0qh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6svg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj6r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcc8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgns")
}],
"loop": false,
"name": &"fly",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvvus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qfbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jbf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lkrc")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pudh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liavk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2avk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epfhx")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ldfj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dndbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjva0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wau5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3sjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdpon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7t4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26mlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao867")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o756")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16pql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itbk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w58n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3omc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n04gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_118b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klq14")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r64rg"]
radius = 5.0

[sub_resource type="Animation" id="Animation_xhpga"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r16ob"]
resource_name = "chargedJump"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(10, 10, 10, 1), Color(1, 1, 1, 1), Color(10, 10, 10, 1)]
}

[sub_resource type="Animation" id="Animation_irghb"]
resource_name = "chargingJump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(10, 10, 10, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8533e"]
resource_name = "flying"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/FeatherSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}

[sub_resource type="Animation" id="Animation_u7avv"]
resource_name = "hurt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.490196), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vwy2d"]
resource_name = "jump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10h1i"]
_data = {
"RESET": SubResource("Animation_xhpga"),
"chargedJump": SubResource("Animation_r16ob"),
"chargingJump": SubResource("Animation_irghb"),
"flying": SubResource("Animation_8533e"),
"hurt": SubResource("Animation_u7avv"),
"jump": SubResource("Animation_vwy2d")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_eu1wi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_kysy4")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_8gryx")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_r64rg")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_10h1i")
}
autoplay = "RESET"

[node name="Sounds" type="Node" parent="."]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_e0bit")
pitch_scale = 1.5
bus = &"SFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("3_7c2jg")
pitch_scale = 0.5
bus = &"SFX"

[node name="FeatherSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_ljgnm")
bus = &"SFX"

[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
